# SolanaYieldAdapter

./: Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: test.yml
adapters/drift-insurance/: Cargo.toml
adapters/drift-insurance/src/: lib.rs
adapters/jupiter-lp/: Cargo.toml
adapters/jupiter-lp/src/: lib.rs
adapters/kamino-usdc/: Cargo.toml
adapters/kamino-usdc/src/: lib.rs
adapters/maple-syrup/: Cargo.toml
adapters/maple-syrup/src/: lib.rs
adapters/marginfi-usdc/: Cargo.toml
adapters/marginfi-usdc/src/: lib.rs
docs/: ADAPTER_STANDARD.md  BUILD_YOUR_OWN_ADAPTER.md
programs/adapter-registry/: Cargo.toml
programs/adapter-registry/src/: error.rs  lib.rs  state.rs
programs/adapter-registry/src/instructions/: approve.rs  deprecate.rs  governance.rs  initialize.rs  mod.rs  propose.rs  reject.rs
programs/yield-dispatcher/: Cargo.toml
programs/yield-dispatcher/src/: error.rs  events.rs  interface.rs  lib.rs  state.rs
programs/yield-dispatcher/src/instructions/: current_value.rs  deposit.rs  harvest.rs  initialize.rs  mod.rs  position.rs  update_config.rs  withdraw.rs
scripts/: deploy-devnet.ts
sdk/: package.json
sdk/src/: constants.ts  dispatcher-client.ts  index.ts  pda.ts  registry-client.ts  types.ts
sdk/src/adapters/: account-builders.ts
tests/integration/: adapters.test.ts  fork-setup.ts  kamino-usdc.test.ts
tests/unit/: dispatcher.test.ts  registry.test.ts
tests/utils/: helpers.ts
