[workspace]
members = [
"programs/yield-dispatcher",
"programs/adapter-registry",
"adapters/kamino-usdc",
"adapters/marginfi-usdc",
"adapters/jupiter-lp",
"adapters/maple-syrup",
"adapters/drift-insurance",
]
resolver = "2"
[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
solana-program = "2.2.20"
solana-sdk = "2.2.20"
borsh = "0.10.3"
thiserror = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
