[package]
name = "adapter-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adapter_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }

[dev-dependencies]
solana-program-test = "2.2.20"
solana-sdk = { workspace = true }
